--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
-  "name": "apis-catalog-ui",
-  "version": "0.0.1",
+  "name": "apis-catalog-web",
+  "version": "0.1.0",
   "private": true,
+  "dependencies": {
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "dependencies": {
-    "@material-ui/core": "latest",
-    "@material-ui/icons": "^4.5.1",
-    "clsx": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-scripts": "latest"
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -27,5 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  }, 
+  "proxy": "http://localhost:8088"
 }
