--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_API_DOC_URL=http://somewhere-you-have-your-html-docs
+REACT_APP_STASH_BASE_URL=https://stash.murex.com/projects/PAA/repos/apis-catalog/browse/catalog
