--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_API_DOC_URL=http://somewhere-you-have-your-html-docs
 REACT_APP_PACT_DOC_URL=http://somewhere-you-have-your-pact-docs
-REACT_APP_STASH_BASE_URL=https://stash.murex.com/projects/PAA/repos/apis-catalog/browse/catalog
+REACT_APP_STASH_BASE_URL=http://somewhere-you-have-your-stash-repo/projects/PAA/repos/my-repo/
