--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.10.1",
-    "@testing-library/react": "^10.4.3",
-    "@testing-library/user-event": "^10.4.1",
-    "axios": "^0.19.2",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
     "classnames": "^2.2.6",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-google-charts": "^3.0.15",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "4.0.0",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
