--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_API_DOC_URL=http://somewhere-you-have-your-html-docs
 REACT_APP_PACT_DOC_URL=http://somewhere-you-have-your-pact-docs
 REACT_APP_STASH_BASE_URL=http://somewhere-you-have-your-stash-repo/projects/PAA/repos/my-repo/
+
+REACT_APP_BETA=false
