--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -17,5 +17,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Install dependencies
+        run: npm install
       - run: npm run build --if-present
       - run: npm test
