--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,5 +19,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
         run: npm install
-      - run: npm run build --if-present
+      - run: CI=false npm run build --if-present
       - run: npm test
