--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://127.0.0.1:8088"
+  "proxy": "http://127.0.0.1:8088",
+  "devDependencies": {
+    "jest": "^27.5.1",
+    "jest-cli": "^27.5.1"
+  }
 }
