--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,6 +2,10 @@ name: npm build
 
 on: [push]
 
+env: 
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{github.repository}}
+
 jobs:
   build:
 
@@ -23,3 +27,32 @@ jobs:
       - run: CI=false npm run build --if-present
       - name: Upload coverage reports
         run: COVERALLS_REPO_TOKEN="${{secrets.COVERALLS_TOKEN}}" npm run coveralls
+  
+  build_and_publish_image:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps: 
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v1.14.1
+        with: 
+          registry: ${{env.REGISTRY}}
+          username: ${{github.actor}}
+          password: ${{secrets.GITHUB_TOKEN}}
+      
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v3.6.2
+        with: 
+          images: ${{env.REGISTRY}}/${{env.IMAGE_NAME}}
+
+      - name: build and push Docker image
+        uses: docker/build-push-action@v2.10.0
+        with: 
+          #context: ./server/
+          push: true
+          tags: ${{steps.meta.outputs.tags}}
+          labels: ${{steps.meta.outputs.labels}} 
