--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -52,7 +52,7 @@ jobs:
       - name: build and push Docker image
         uses: docker/build-push-action@v2.10.0
         with: 
-          #context: ./server/
+          context: .
           push: true
           tags: ${{steps.meta.outputs.tags}}
           labels: ${{steps.meta.outputs.labels}} 
