--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -31,6 +31,9 @@ jobs:
   build_and_publish_image:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps: 
       - name: Checkout repository
