--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
+    "@emotion/react": "11.8.2",
+    "@emotion/styled": "11.8.1",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
-    "@mui/icons-material": "^5.4.2",
-    "@mui/material": "^5.3.0",
-    "@mui/styled-engine-sc": "^5.3.0",
-    "@mui/styles": "^5.3.0",
-    "@testing-library/jest-dom": "^5.10.1",
-    "@testing-library/react": "^12.1.2",
+    "@mui/icons-material": "5.5.1",
+    "@mui/material": "5.5.2",
+    "@mui/styled-engine-sc": "5.5.2",
+    "@mui/styles": "5.5.1",
+    "@testing-library/jest-dom": "5.16.3",
+    "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.25.0",
+    "axios": "0.26.1",
     "classnames": "^2.2.6",
     "coveralls": "^3.1.1",
     "prop-types": "^15.8.1",
@@ -23,7 +23,7 @@
     "react-google-charts": "^3.0.15",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
-    "styled-components": "^5.3.3",
+    "styled-components": "5.3.5",
     "uuid": "^8.3.1"
   },
   "scripts": {
