--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
     "@mui/icons-material": "5.5.1",
-    "@mui/material": "5.5.2",
+    "@mui/material": "^5.5.3",
     "@mui/styled-engine-sc": "5.5.2",
-    "@mui/styles": "5.5.1",
+    "@mui/styles": "^5.5.3",
     "@testing-library/jest-dom": "5.16.3",
     "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "^13.5.0",
