--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@mui/styles": "^5.5.3",
     "@testing-library/jest-dom": "5.16.3",
     "@testing-library/react": "12.1.4",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-event": "14.0.0",
     "axios": "0.26.1",
     "classnames": "^2.2.6",
     "coveralls": "^3.1.1",
