--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-charts": "^3.0.15",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "6.2.2",
     "react-scripts": "5.0.0",
     "styled-components": "5.3.5",
     "uuid": "^8.3.1"
