--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -57,4 +57,4 @@ jobs:
         with: 
           context: .
           push: true
-          tags: omallassi/apis-catalog-web:latest
+          tags: ghcr.io/omallassi/apis-catalog-web:latest
