--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_DOC_URL=http://somewhere-you-have-your-html-docs
+REACT_APP_API_DOC_URL=http://mxarch.fr.murex.com:31737
 REACT_APP_PACT_DOC_URL=http://somewhere-you-have-your-pact-docs
 REACT_APP_STASH_BASE_URL=http://somewhere-you-have-your-stash-repo/projects/PAA/repos/my-repo/
 
