--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "proxy": "http://127.0.0.1:8088",
   "devDependencies": {
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^27.5.1",
     "jest-cli": "^27.5.1"
   }
