--- a/package.json
+++ b/package.json
@@ -7,14 +7,11 @@
     "@emotion/styled": "11.11.0",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
-    "@mui/icons-material": "5.14.9",
-    "@mui/material": "^5.5.3",
+    "@mui/icons-material": "5.14.14",
+    "@mui/material": "5.14.14",
     "@mui/styled-engine-sc": "5.14.10",
-    "@mui/styles": "^5.5.3",
-    "@testing-library/jest-dom": "5.16.3",
-    "@testing-library/react": "12.1.4",
-    "@testing-library/user-event": "14.0.0",
-    "axios": "1.5.0",
+    "@mui/styles": "5.14.14",
+    "axios": "1.5.1",
     "classnames": "^2.2.6",
     "coveralls": "^3.1.1",
     "prop-types": "^15.8.1",
@@ -24,7 +21,7 @@
     "react-router-dom": "6.2.2",
     "react-scripts": "5.0.0",
     "styled-components": "5.3.5",
-    "uuid": "^8.3.1"
+    "uuid": "9.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,7 +49,10 @@
   "proxy": "http://127.0.0.1:8088",
   "devDependencies": {
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^27.5.1",
-    "jest-cli": "^27.5.1"
+    "jest": "29.7.0",
+    "jest-cli": "29.7.0",
+    "@testing-library/jest-dom": "5.16.3",
+    "@testing-library/react": "12.1.4",
+    "@testing-library/user-event": "14.0.0"
   }
 }
