--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "11.11.1",
-    "@emotion/styled": "11.11.0",
-    "@material-ui/core": "^4.10.2",
-    "@material-ui/icons": "^4.9.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "5.14.14",
-    "@mui/material": "5.14.14",
+    "@mui/material": "^5.14.14",
     "@mui/styled-engine-sc": "5.14.10",
     "@mui/styles": "5.14.14",
     "axios": "1.5.1",
@@ -48,11 +46,11 @@
   },
   "proxy": "http://127.0.0.1:8088",
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "29.7.0",
-    "jest-cli": "29.7.0",
     "@testing-library/jest-dom": "5.16.3",
     "@testing-library/react": "12.1.4",
-    "@testing-library/user-event": "14.0.0"
+    "@testing-library/user-event": "14.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "29.7.0",
+    "jest-cli": "29.7.0"
   }
 }
