--- a/package.json
+++ b/package.json
@@ -17,9 +17,17 @@
     "react-dom": "^17.0.1",
     "react-google-charts": "^3.0.15",
     "react-router-dom": "6.2.2",
-    "react-scripts": "5.0.0",
     "styled-components": "5.3.5",
     "uuid": "9.0.1"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "5.16.3",
+    "@testing-library/react": "12.1.4",
+    "@testing-library/user-event": "14.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "29.7.0",
+    "jest-cli": "29.7.0",
+    "react-scripts": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,13 +52,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://127.0.0.1:8088",
-  "devDependencies": {
-    "@testing-library/jest-dom": "5.16.3",
-    "@testing-library/react": "12.1.4",
-    "@testing-library/user-event": "14.0.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "29.7.0",
-    "jest-cli": "29.7.0"
-  }
+  "proxy": "http://127.0.0.1:8088"
 }
